--- a/base/templates/base/login.html
+++ b/base/templates/base/login.html
@@ -1,3 +1,14 @@
+{% if messages %}
+<ul>
+    {% for x in messages%}
+    <li>{{x}}</li>
+
+
+    {% endfor %}
+</ul>
+
+{% endif %}
+
 <form method="POST">
   {% csrf_token %}
   <input type="text" name="username" placeholder="Username" required><br>
