--- a/base/templates/base/register.html
+++ b/base/templates/base/register.html
@@ -1,8 +1,19 @@
+{% if messages %}
+<ul>
+    {% for x in messages%}
+    <li>{{x}}</li>
+
+
+    {% endfor %}
+</ul>
+
+{% endif %}
 <form method="POST">
   {% csrf_token %}
   <input type="text" name="username" placeholder="Username" required><br>
   <input type="email" name="email" placeholder="Email" required><br>
   <input type="password" name="password" placeholder="Password" required><br>
+  <input type="password" name="confirm_password" placeholder="Confirm Password" required><br>
   <button type="submit">Register</button>
 </form>
 <a href="{% url 'login' %}">Login</a>
